--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "NAZRIYABOT",
+  "name": "MissAva_bot",
   "description": "Telegram's sassiest group manager. Modular Telegram group management bot!",
-  "logo": "https://telegra.ph/file/da3cc3f6c857ef60aab08.jpg",
+  "logo": "https://telegra.ph/file/b24bf956867a1df4fe752.jpg",
   "keywords": [
     "telegram",
     "best",
@@ -12,7 +12,7 @@
     "modular",
     "productivity"
   ],
-  "repository": "https://github.com/JINN-OF-TG/TG-BOT",
+  "repository": "https://github.com/tz-ash/TG-BOT",
   "env": {
     "ENV": {
       "description": "Setting this to ANYTHING will enable env variables. But, you need to understand the code to know what to set here!",
@@ -23,11 +23,11 @@
     },
     "OWNER_ID": {
       "description": "An integer of consisting of your owner ID",
-      "value": "1601809003"
+      "value": "1842904084"
     },
     "OWNER_USERNAME": {
       "description": "Your username",
-      "value": "JINN_OF_TG"
+      "value": "kid_of_telegram"
     },
     "WEBHOOK": {
       "description": "Setting this to ANYTHING will enable webhooks when in env mode messages",
@@ -42,19 +42,19 @@
     },
     "SUDO_USERS": {
       "description": "A space separated list of user_ids which should be considered sudo users",
-      "value": "1601809003"
+      "value": "1842904084"
     },
     "SUPPORT_USERS": {
       "description": "A space separated list of user_ids which should be considered support users (can gban/ungban, nothing else)",
-      "value": "1601809003"
+      "value": "1842904084"
     },
     "WHITELIST_USERS": {
       "description": "A space separated list of user_ids which should be considered whitelisted - they can't be banned.",
-      "value": "1601809003"
+      "value": "1842904084"
     },
     "DONATION_LINK": {
       "description": "Optional: link where you would like to receive donations.",
-      "value": "https://t.me/JINN_OF_TG"
+      "value": "https://t.me/kid_of_telegram"
     },
     "PORT": {
       "description": "Port to use for your webhooks",
